<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Speedtouch</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- Main game activity -->
    <string name="score_label">Score:</string>
    <string name="life_remaining">\u2665</string>
    <string name="title_activity_temp_start">TempStart</string>
    <string name="action_settings">Settings</string>

    <!-- High score activity-->
    <string name="game_over_label">Game Over</string>
    <string name="high_score_label">Best</string>
    <string name="current_score_label">Current</string>
    <string name="score_placeholder">00000000</string>
    <string name="btn_back">Back</string>
    <string name="btn_retry">Again</string>
</resources>
