<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              style="@style/genericMenu">

    <Space
        android:layout_weight="20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over_label"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <Space
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/high_score_label"
            android:text="@string/high_score_label"
            android:layout_marginBottom="7dp"
            android:textSize="35sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/current_score_label"
            android:layout_below="@id/high_score_label"
            android:text="@string/current_score_label"
            android:textSize="35sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/high_score_value"
            android:layout_marginBottom="7dp"
            android:text="@string/score_placeholder"
            android:layout_toEndOf="@id/current_score_label"
            android:layout_toRightOf="@id/current_score_label"
            android:textSize="35sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/current_score_value"
            android:text="@string/score_placeholder"
            android:layout_below="@id/high_score_value"
            android:layout_toEndOf="@id/current_score_label"
            android:layout_toRightOf="@id/current_score_label"
            android:textSize="35sp"/>
    </RelativeLayout>


    <Space
        android:layout_weight="40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/btn_back_to_menu"
            android:layout_weight="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:gravity="start"
            style="@style/menuButton"/>

        <Space
            android:layout_weight="7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_try_again"
            android:layout_weight="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_retry"
            android:gravity="end"
            style="@style/menuButton"/>
    </LinearLayout>

    <Space
        android:layout_weight="20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>